--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1> Dibyojyoti you deployed ...</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
+    <h1> Dibyojyoti you have deployed ...</h1>
+    <h2>This application using AWS CodeDeploy in CodePipeline</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
