--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1> Dibyojyoti you have deployed ...</h1>
-    <h2>This application using AWS CodeDeploy in CodePipeline</h2>
+    <h2>updated code in CodePipeline</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
